src/k8s/platform/configuration/traefik/visitor-ip-probe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visitor-ip-probe
spec:
  selector:
    app.kubernetes.io/name: visitor-ip-probe
  ports:
    - name: http
      port: 80
      targetPort: http
