src/k8s/platform/configuration/traefik/visitor-ip-probe/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: visitor-ip-probe
spec:
  entryPoints:
    - websecure
  routes:
    # Exclude whoami's mutable health, bulk data, delay and environment endpoints.
    - match: Host(`visitor-ip-probe.levizitting.com`) && Path(`/api`) && Method(`GET`) && !QueryRegexp(`env`, `.*`)
      kind: Rule
      middlewares:
        - name: client-headers
      services:
        - name: visitor-ip-probe
          port: 80
  tls:
    secretName: visitor-ip-probe-tls
