src/k8s/platform/configuration/traefik/visitor-ip-probe/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: visitor-ip-probe
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: visitor-ip-probe
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
          protocol: TCP
  egress: []
